chore(Autocomplete): fix extra padding

--- a/packages/themes/src/morpheme/_autocomplete.scss
+++ b/packages/themes/src/morpheme/_autocomplete.scss
@@ -143,7 +143,7 @@
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
     padding-left: 0.75rem;
-    padding-right: 5rem;
+    padding-right: 0.75rem;
     height: var(--v-autocomplete-input-height);
 
     &--selected {
